[package]
name = "lexicon_fractional_index"
version = "0.0.1"
edition = "2021"
authors = ["Shore <yong@shore.network>"]
license = "MIT"
description = "Fractional index implementation migrated from JavaScript"
homepage = "https://github.com/shore-ai/lexion-fractional-index/"
documentation = "https://docs.rs/crate/lexicon_fractional_index/"
repository = "https://github.com/shore-ai/lexion-fractional-index/"
readme = "README.md"
keywords = ["fractional-index"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
