[package]
name = "lexicon_fractional_index"
version = "0.0.2"
edition = "2021"
authors = ["Shore <yong@shore.network>"]
license = "MIT"
description = "Fractional index implementation migrated from Go/JavaScript"
homepage = "https://github.com/TODO/lexicon-fractional-index/"
documentation = "https://docs.rs/crate/lexicon_fractional_index/"
repository = "https://github.com/TODO/lexicon-fractional-index/"
readme = "README.md"
keywords = ["fractional-index"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false